--- a/collections/_communities/events/overview.html
+++ b/collections/_communities/events/overview.html
@@ -58,4 +58,18 @@ redirect_from:
       </div>
     </div>
   </div>
+  <div class="col is-6 is-flex">
+    <div class="sgds-card">
+      <div class="sgds-card-content">
+        <h3>COVID-19 Volunteering Opportunities</h3>
+        <p>
+          Find out how you can help the Singapore Government in its digital efforts to
+          combat the COVID-19 pandemic.
+        </p>
+      </div>
+      <div class="sgds-card-footer">
+        <a href="covid-19-volunteering-opportunities" class="sgds-card-footer-item">Read more</a>
+      </div>
+    </div>
+  </div>
 </div>
