--- a/collections/_communities/events/overview.html
+++ b/collections/_communities/events/overview.html
@@ -21,7 +21,7 @@ redirect_from:
       <div class="sgds-card-content">
         <h3>STACK-X - CI/CD with SHIP-HATS</h3>
         <p>
-       Join us on a two-day hybrid conference to learn about Singapore Government's vision, approach and programmes to help agencies to accelerate their modernisation plans with CI/CD. 
+       Join us on a two-day hybrid conference to learn about Singapore Government's vision, approach and programmes to help agencies to accelerate their modernisation plans with CI/CD.
         </p>
       </div>
       <div class="sgds-card-footer">
@@ -55,6 +55,20 @@ redirect_from:
       </div>
       <div class="sgds-card-footer">
         <a href="stack-the-flags-2020" class="sgds-card-footer-item">Read more</a>
+      </div>
+    </div>
+  </div>
+  <div class="col is-6 is-flex">
+    <div class="sgds-card">
+      <div class="sgds-card-content">
+        <h3>COVID-19 Volunteering Opportunities</h3>
+        <p>
+          Find out how you can help the Singapore Government in its digital efforts to
+          combat the COVID-19 pandemic.
+        </p>
+      </div>
+      <div class="sgds-card-footer">
+        <a href="covid-19-volunteering-opportunities" class="sgds-card-footer-item">Read more</a>
       </div>
     </div>
   </div>
