updated dgx index.html

--- a/collections/_communities/dgx/index.html
+++ b/collections/_communities/dgx/index.html
@@ -1,8 +1,56 @@
 ---
 title: DGX
 layout: layout-page-sidenav
+description: >
 ---
-<h1>
-Add content for DGX here
-</h1>
 
+<figure>
+  <img
+    src="/assets/img/DGX 2021-02.png"
+    alt="DGX 2021"
+  />
+</figure>
+
+<h2>DIGITAL GOVERNMENT EXCHANGE</h2>
+
+<p>
+  Organised by the Smart Nation and Digital Government Group Singapore, 
+  the Digital Government Exchange (DGX) conducted its inaugural conference in 2016. 
+</p>
+
+<p>
+  DGX is a two-day invitation-only event for digital government leaders to engage with like minded agencies 
+  to transform and develop better digital services. The annual event facilitates insightful conversations on the impact of 
+  technologies on communities and economies. Members include Australia, Canada, China, Estonia, Finland, Israel, Japan, 
+  New Zealand, Sweden, The Netherlands, UK and US and multilateral organisation representatives from the United Nations Department of Economic 
+  and Social Affairs and World Bank. 
+</p>
+
+<p>
+  In addition to the annual conference, DGX has convened special webinars in response to the crisis to
+  discuss pertinent topics including contact tracing and most recently, safe travel.
+</p>
+
+<h4>Digital Government Exchange - Safe Travel Working Group</h4>
+
+<p>
+  Globally, there are ongoing discussions on vaccine certificates could be part of the effort to reopen the global economy. 
+  Members recognised the increasing need to collaborate in preparation for cross border verification. 
+  A special edition DGX webinar was conducted on 16 March 2021.
+</p>
+
+<p>
+  DGX members agreed that technical discussions for cross border recognition of digital health certificates should 
+  ommence to ensure member countries were ready when policy discussions were completed. 
+  To continue the discussions, the DGX Safe Travel Working Group was formed. Members include Australia, Canada, Israel, Japan, 
+  New Zealand, Sweden, the UK and UNDESA. The first working group meeting was held on 15 April 2021.
+</p>
+
+<p>
+  To exchange information, a repository has been created and can be found here.
+</p>
+
+<p>
+  Please contact <a href="mailto:karen_kee@tech.gov.sg" rel="noopener noreferrer nofollow">karen_kee@tech.gov.sg</a> 
+  should you require further information.
+</p>
