--- a/collections/_communities/dgx/index.html
+++ b/collections/_communities/dgx/index.html
@@ -4,9 +4,9 @@ layout: layout-page-sidenav
 description: >
 ---
 
-<figure>
+<figure style="text-align: center; width: 60%; height: 60%">
   <img
-    src="/assets/img/DGX 2021-02.png"
+    src="/assets/img/dgx-2021-02.png"
     alt="DGX 2021"
   />
 </figure>
