--- a/collections/_communities/dgx/index.html
+++ b/collections/_communities/dgx/index.html
@@ -4,7 +4,7 @@ layout: layout-page-sidenav
 description: >
 ---
 
-<figure style="text-align: center; width: 60%; height: 60%">
+<figure style="text-align: center; width: 60%; height: 60%;">
   <img
     src="/assets/img/dgx-2021-02.png"
     alt="DGX 2021"
