--- a/collections/_communities/dgx/index.html
+++ b/collections/_communities/dgx/index.html
@@ -4,14 +4,15 @@ layout: layout-page-sidenav
 description: >
 ---
 
-<figure style="text-align: center; width: 60%; height: 60%;">
+<figure style="text-align: center">
   <img
     src="/assets/img/dgx-2021-02.png"
-    alt="DGX 2021"
+    alt="DGX 2021" 
+    style="width: 50%; height: 50%"
   />
 </figure>
 
-<h2>DIGITAL GOVERNMENT EXCHANGE</h2>
+<h2 style="text-align: center">DIGITAL GOVERNMENT EXCHANGE</h2>
 
 <p>
   Organised by the Smart Nation and Digital Government Group Singapore, 
