update dgx picture size 50%

--- a/collections/_communities/dgx/index.html
+++ b/collections/_communities/dgx/index.html
@@ -7,12 +7,11 @@ description: >
 <figure style="text-align: center">
   <img
     src="/assets/img/dgx-2021-02.png"
-    alt="DGX 2021" 
-    style="width: 50%; height: 50%"
+    alt="DGX 2021" style="width: 50%; height: 50%;"
   />
 </figure>
 
-<h2 style="text-align: center">DIGITAL GOVERNMENT EXCHANGE</h2>
+<h2>DIGITAL GOVERNMENT EXCHANGE</h2>
 
 <p>
   Organised by the Smart Nation and Digital Government Group Singapore, 
@@ -32,7 +31,7 @@ description: >
   discuss pertinent topics including contact tracing and most recently, safe travel.
 </p>
 
-<h4>Digital Government Exchange - Safe Travel Working Group</h4>
+<h3>Digital Government Exchange - Safe Travel Working Group</h3>
 
 <p>
   Globally, there are ongoing discussions on vaccine certificates could be part of the effort to reopen the global economy. 
