Update dgx image in dgx page

--- a/collections/_communities/dgx/index.html
+++ b/collections/_communities/dgx/index.html
@@ -6,8 +6,8 @@ description: >
 
 <figure style="text-align: center">
   <img
-    src="/assets/img/dgx-2021-02.png"
-    alt="DGX 2021" style="width: 50%; height: 50%;"
+    src="/assets/img/dgx-2021-02_25.png"
+    alt="DGX 2021"
   />
 </figure>
 
@@ -47,7 +47,8 @@ description: >
 </p>
 
 <p>
-  To exchange information, a repository has been created and can be found here.
+  To exchange information, a repository has been created and can be found 
+  <a href="https://drive.google.com/file/d/1axLdIizPsXk54StSz3DMpWoRVDsq_6UX/view?usp=sharing">here</a>.
 </p>
 
 <p>
