adjust dgx image size

--- a/collections/_communities/dgx/index.html
+++ b/collections/_communities/dgx/index.html
@@ -5,7 +5,7 @@ description: >
 ---
 
 <figure style="text-align: center">
-  <img
+  <img style="width: 50%;height: 50%;" 
     src="/assets/img/dgx-2021-02_25.png"
     alt="DGX 2021"
   />
