--- a/collections/_communities/dgx/index.html
+++ b/collections/_communities/dgx/index.html
@@ -4,13 +4,10 @@ layout: layout-page-sidenav
 description: >
 ---
 
-<figure style="text-align: center">
-  <img style="width: 50%;height: 50%;" 
-    src="/assets/img/dgx-2021-02_25.png"
-    alt="DGX 2021"
-  />
-</figure>
-<h2>DIGITAL GOVERNMENT EXCHANGE</h2>
+<h2>
+  <img src="/assets/img/dgx-2021-02_25.png" style="width: 50%;height: 50%;">
+  DIGITAL GOVERNMENT EXCHANGE
+</h2>
 
 <p>
   Organised by the Smart Nation and Digital Government Group Singapore, 
